--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,2 @@
 from php:7.0-fpm  
-RUN docker-php-ext-install mysqli pdo pdo_mysql  && docker-php-ext-enable pdo_mysql
-#copy ./provision/www.conf /etc/php/7.0/fpm/pool.d/www.conf
+RUN docker-php-ext-install mysqli pdo pdo_mysql  && dockephp-ext-enable pdo_mysql
