--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - ../src/barbershop/:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: root
-  python:
-    build: ./ 
-    ports:
-      - 8080:80
-    command: sleep 1000000s
+  #python:
+    #build: ./
+    #ports:
+      #- 8080:80
+    #command: sleep 1000000s
