--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   web: 
     image: nginx:1.21.6 
@@ -22,7 +22,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ../src/barbershop/:/docker-entrypoint-initdb.d
+      - ../src/shop.sql:/docker-entrypoint-initdb.d/shop.sql
     environment:
       MYSQL_ROOT_PASSWORD: root
   #python:
