--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,2 @@
 from php:7.0-fpm  
-RUN docker-php-ext-install mysqli pdo pdo_mysql  && dockephp-ext-enable pdo_mysql
+RUN docker-php-ext-install mysqli pdo pdo_mysql  && docker-php-ext-enable pdo_mysql
