--- a/docker/nginx/docker/nginx.conf
+++ b/docker/nginx/docker/nginx.conf
@@ -15,7 +15,7 @@
 #
 upstream backend {
        #server 127.0.0.1:9000;
-        server api:9000;
+        server php-app:9000;
 } 
 server {
 	listen 80 default_server;
