added php config so php can listen on port 9000

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,4 @@
-from php:7.0-fpm  
+from php:7.0-fpm 
+
+COPY ./provision/www.conf /etc/php/7.0/fpm/pool.d/www.conf 
 RUN docker-php-ext-install mysqli pdo pdo_mysql  && docker-php-ext-enable pdo_mysql
