--- a/docker/nginx/docker/Dockerfile
+++ b/docker/nginx/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
-COPY ./fcgiwrap.conf /etc/nginx/conf.d/default.conf
+COPY ./fcgiwrap.conf /etc/nginx/
