--- a/docker/nginx/docker/nginx.conf
+++ b/docker/nginx/docker/nginx.conf
@@ -47,7 +47,7 @@ server {
 	  location / {
 	    try_files $uri /index.php$is_args$query_string;
 	  }
-      include fcgiwrap.conf;
+      #include fcgiwrap.conf;
 	  location ~ .php {
 	    try_files $uri =404;
 	    fastcgi_pass backend;
