--- a/docker/nginx/docker/nginx.conf
+++ b/docker/nginx/docker/nginx.conf
@@ -36,8 +36,8 @@ server {
 	# Don't use them in a production server!
 	#
 	# include snippets/snakeoil.conf;
-    root /usr/share/nginx/html;
-	#root /var/www/html;
+    #root /usr/share/nginx/html;
+   root /var/www/html;
 
 	# Add index.php to the list if you are using PHP
 	#index index.html index.htm index.nginx-debian.html index.php;
